@@ -58,6 +58,8 @@
             <menuitem action="GoForward"/>
         </menu>
         <menu action="HelpMenu">
+            <menuitem action="SubmitBugReport"/>
+            <separator/>
             <menuitem action="About"/>
         </menu>
     </menubar>
