@@ -1,3 +1,11 @@
+2007-08-11 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/preferences.rb: Some code to detect which browser to use.
+    * data/fantasdic/ui/menus.xml: Added a "submit bug report" menu item.
+    * lib/fantasdic/ui/main_app.rb: Ditto.
+    * lib/fantasdic/ui/about_dialog.rb: Make the URL clickable.
+    * lib/fantasdic.rb: Added BUGZILLA_REPORT_BUG constant.
+
 2007-08-10 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb: Load/Save PageSetup and PrintSetting from/to
